; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_libxvid.c_xvid_ff_2pass_destroy.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_libxvid.c_xvid_ff_2pass_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xvid_context = type { i64* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.xvid_context*, i32*)* @xvid_ff_2pass_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xvid_ff_2pass_destroy(%struct.xvid_context* %0, i32* %1) #0 {
  %3 = alloca %struct.xvid_context*, align 8
  %4 = alloca i32*, align 8
  store %struct.xvid_context* %0, %struct.xvid_context** %3, align 8
  store i32* %1, i32** %4, align 8
  %5 = load %struct.xvid_context*, %struct.xvid_context** %3, align 8
  %6 = getelementptr inbounds %struct.xvid_context, %struct.xvid_context* %5, i32 0, i32 0
  %7 = load i64*, i64** %6, align 8
  %8 = icmp ne i64* %7, null
  br i1 %8, label %9, label %14

9:                                                ; preds = %2
  %10 = load %struct.xvid_context*, %struct.xvid_context** %3, align 8
  %11 = getelementptr inbounds %struct.xvid_context, %struct.xvid_context* %10, i32 0, i32 0
  %12 = load i64*, i64** %11, align 8
  %13 = getelementptr inbounds i64, i64* %12, i64 0
  store i64 0, i64* %13, align 8
  br label %14

14:                                               ; preds = %9, %2
  ret i32 0
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
